Created separate file for cities list to clean up main.js. Updated API keys to work with Google Cloud platform.

--- a/missing-children.html
+++ b/missing-children.html
@@ -22,8 +22,10 @@
     <div id="map"></div>
     <div id="messages"></div>
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="js/cities.js"></script>
     <script src="js/main.js"></script>
     <!-- missing-children-20180808 -->
-		<script src="https://maps.googleapis.com/maps/api/js?key=[API KEY]&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=[JAVASCRIPT MAPS API KEY .env]&callback=initMap"
+  async defer></script>
 	</body>
 </html>
